Initial Heroku deployment

--- a/config/config.json
+++ b/config/config.json
@@ -12,6 +12,12 @@
   "production": {
     "database": "bootcamp_buddy_production",
     "host": "127.0.0.1",
-    "dialect": "postgres"
+    "dialect": "postgres",
+    "dialectOptions": {
+      "ssl": {
+        "rejectUnauthorized": false,
+        "require": true
+      }
+    }
   }
 }
